delete h1, update main and section

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -7,18 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Trackgenix SA</h1>
-    <h2>What is Trackgenix</h2>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam pariatur ipsa
-        laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis voluptates ratione. Modi, aut no
-        bis?
-    </p>
-    <h2>Our History</h2>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime dolores omnis, 
-        ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum reiciendis temporibus numquam. 
-        Alias, deleniti!
-    </p>
+    <main>
+        <section>
+            <h2>What is Trackgenix</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam pariatur 
+                ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis voluptates ratione.
+                Modi, aut nobis?
+            </p>
+            <h2>Our History</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime dolores
+                omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum reiciendis temporibus
+                numquam. Alias, deleniti!
+            </p>
+        </section>
+    </main>
 </body>
 </html>
