added nav sidebar

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <main>
+        <nav>
+            <input type="text" disabled>Search
+            <button>Log In</button>
+            <button>Sig Up</button>
+            <span>Menu</span>
+            <a href="">Homepage</a>
+            <a href="">Generic</a>
+            <a href="">Contact Us</a>
+            <span>Get in touch</span>
+            <span>mailinfo@trackgenix.com</span>
+            <span>123-456789</span>
+            <span>123 fake road #2000</span>
+            <span>Rosario, Argentina</span>
+        </nav>
         <section>
             <h2>What is Trackgenix</h2>
             <p>
