added deleted h1 and ul section

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <nav>
-            <input type="text" disabled>Search
+            <input type="text" placeholder="Search">
             <button>Log In</button>
             <button>Sig Up</button>
             <span>Menu</span>
@@ -22,6 +22,9 @@
             <span>123 fake road #2000</span>
             <span>Rosario, Argentina</span>
         </nav>
+        <header>
+            <h1>Trackgenix</h1>
+        </header>
         <section>
             <h2>What is Trackgenix</h2>
             <p>
@@ -35,6 +38,21 @@
                 omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum reiciendis temporibus
                 numquam. Alias, deleniti!
             </p>
+        </section>
+        <section>
+            <h2>Features</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit illo
+                amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam aperiam.
+                Molestias!
+            </p>
+            <ul>
+                <li>Item 1: lorem ipsum is simply dummy text of the printin</li>
+                <li>Item 2: lorem ipsum is simply dummy text of the printin</li>
+                <li>Item 3: lorem ipsum is simply dummy text of the printin</li>
+                <li>Item 4: lorem ipsum is simply dummy text of the printin</li>
+                <li>Item 5: lorem ipsum is simply dummy text of the printin</li>
+            </ul>
         </section>
     </main>
 </body>
