added why trackgenix section, and contact form, updated anchors

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -13,9 +13,9 @@
             <button>Log In</button>
             <button>Sig Up</button>
             <span>Menu</span>
-            <a href="">Homepage</a>
-            <a href="">Generic</a>
-            <a href="">Contact Us</a>
+            <a href="#home">Homepage</a>
+            <a href="#features">Generic</a>
+            <a href="#contact-us">Contact Us</a>
             <span>Get in touch</span>
             <span>mailinfo@trackgenix.com</span>
             <span>123-456789</span>
@@ -25,13 +25,15 @@
         <header>
             <h1>Trackgenix</h1>
         </header>
-        <section>
+        <section id="home">
             <h2>What is Trackgenix</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam pariatur 
                 ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis voluptates ratione.
                 Modi, aut nobis?
             </p>
+            <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="office" width="600" height="400">
+            <img src="https://images.unsplash.com/photo-1604307743907-df8d5fe9f1de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="software" width="600" height="400">
             <h2>Our History</h2>
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime dolores
@@ -39,7 +41,7 @@
                 numquam. Alias, deleniti!
             </p>
         </section>
-        <section>
+        <section id="features">
             <h2>Features</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit illo
@@ -53,6 +55,57 @@
                 <li>Item 4: lorem ipsum is simply dummy text of the printin</li>
                 <li>Item 5: lorem ipsum is simply dummy text of the printin</li>
             </ul>
+        </section>
+        <section id="trackgenix">
+            <h2>Why Trackgenix?</h2>
+            <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
+            <h3>Subheader</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                reiciendis nesciunt numquam.
+            </p>
+            <button>Learn More</button>
+            <h3>Subheader</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                reiciendis nesciunt numquam. 
+            </p>
+            <button>Learn More</button>
+            <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
+            <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
+            <h3>Subheader</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                reiciendis nesciunt numquam.
+            </p>
+            <button>Learn More</button>
+            <h3>Subheader</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                reiciendis nesciunt numquam. 
+            </p>
+            <button>Learn More</button>
+            <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
+        </section>
+        <section id="contact-us">
+            <h2>Contact Us</h2>
+            <form action="">
+                <label for="Name">Name</label>
+                <input type="text" placeholder="Insert your name">
+                <label for="email">Email</label>
+                <input type="email" placeholder="Insert your email">
+                <label for="contactarea">Contact area:</label>
+                <select name="area" id="area">
+                    <option value="rrhh">Human resources</option>
+                    <option value="development">Development</option>
+                    <option value="marketing">Marketing</option>
+                </select>
+                <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...</textarea>
+            </form>
         </section>
     </main>
 </body>
