footer, ol, icons

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -1,112 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <main>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            Document
+        </title>
+    </head>
+    <body>
         <nav>
             <input type="text" placeholder="Search">
-            <button>Log In</button>
-            <button>Sig Up</button>
-            <span>Menu</span>
-            <a href="#home">Homepage</a>
-            <a href="#features">Generic</a>
-            <a href="#contact-us">Contact Us</a>
-            <span>Get in touch</span>
-            <span>mailinfo@trackgenix.com</span>
-            <span>123-456789</span>
-            <span>123 fake road #2000</span>
-            <span>Rosario, Argentina</span>
+            <button>
+                Log In
+            </button>
+            <button>
+                Sign Up
+            </button>
+            <span>
+                Menu
+            </span>
+            <a href="#home">
+                Homepage
+            </a>
+            <a href="#features">
+                Generic
+            </a>
+            <a href="#contact-us">
+                Contact Us
+            </a>
+            <span>
+                Get in touch
+            </span>
+            <span>
+                mailinfo@trackgenix.com
+            </span>
+            <span>
+                123-456789
+            </span>
+            <span>
+                123 fake road #2000
+            </span>
+            <span>
+                Rosario, Argentina
+            </span>
         </nav>
-        <header>
-            <h1>Trackgenix</h1>
-        </header>
-        <section id="home">
-            <h2>What is Trackgenix</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam pariatur 
-                ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis voluptates ratione.
-                Modi, aut nobis?
-            </p>
-            <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="office" width="600" height="400">
-            <img src="https://images.unsplash.com/photo-1604307743907-df8d5fe9f1de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="software" width="600" height="400">
-            <h2>Our History</h2>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime dolores
-                omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum reiciendis temporibus
-                numquam. Alias, deleniti!
-            </p>
-        </section>
-        <section id="features">
-            <h2>Features</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit illo
-                amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam aperiam.
-                Molestias!
-            </p>
-            <ul>
-                <li>Item 1: lorem ipsum is simply dummy text of the printin</li>
-                <li>Item 2: lorem ipsum is simply dummy text of the printin</li>
-                <li>Item 3: lorem ipsum is simply dummy text of the printin</li>
-                <li>Item 4: lorem ipsum is simply dummy text of the printin</li>
-                <li>Item 5: lorem ipsum is simply dummy text of the printin</li>
-            </ul>
-        </section>
-        <section id="trackgenix">
-            <h2>Why Trackgenix?</h2>
-            <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
-            <h3>Subheader</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                reiciendis nesciunt numquam.
-            </p>
-            <button>Learn More</button>
-            <h3>Subheader</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                reiciendis nesciunt numquam. 
-            </p>
-            <button>Learn More</button>
-            <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
-            <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
-            <h3>Subheader</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                reiciendis nesciunt numquam.
-            </p>
-            <button>Learn More</button>
-            <h3>Subheader</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                reiciendis nesciunt numquam. 
-            </p>
-            <button>Learn More</button>
-            <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
-        </section>
-        <section id="contact-us">
-            <h2>Contact Us</h2>
-            <form action="">
-                <label for="Name">Name</label>
-                <input type="text" placeholder="Insert your name">
-                <label for="email">Email</label>
-                <input type="email" placeholder="Insert your email">
-                <label for="contactarea">Contact area:</label>
-                <select name="area" id="area">
-                    <option value="rrhh">Human resources</option>
-                    <option value="development">Development</option>
-                    <option value="marketing">Marketing</option>
-                </select>
-                <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...</textarea>
-            </form>
-        </section>
-    </main>
-</body>
+        <main>
+            <header>
+                <h1>
+                    Trackgenix
+                </h1>
+            </header>
+            <section id="home">
+                <h2>
+                    What is Trackgenix
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam pariatur 
+                    ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis voluptates ratione.
+                    Modi, aut nobis?
+                </p>
+                <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="office" width="600" height="400">
+                <img src="https://images.unsplash.com/photo-1604307743907-df8d5fe9f1de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="software" width="600" height="400">
+                <h2>
+                    Our History
+                </h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime dolores
+                    omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum reiciendis temporibus
+                    numquam. Alias, deleniti!
+                </p>
+            </section>
+            <section id="features">
+                <h2>
+                    Features
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit illo
+                    amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam aperiam.
+                    Molestias!
+                </p>
+                <ul>
+                    <li>
+                        Item 1: lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 2: lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 3: lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 4: lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 5: lorem ipsum is simply dummy text of the printin
+                    </li>
+                </ul>
+            </section>
+            <section id="trackgenix">
+                <h2>
+                    Why Trackgenix?
+                </h2>
+                <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
+                <h3>
+                    Subheader
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                    reiciendis nesciunt numquam.
+                </p>
+                <button>
+                    Learn More
+                </button>
+                <h3>
+                    Subheader
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                    reiciendis nesciunt numquam. 
+                </p>
+                <button>
+                    Learn More
+                </button>
+                <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
+                <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
+                <h3>
+                    Subheader
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                    reiciendis nesciunt numquam.
+                </p>
+                <button>
+                    Learn More
+                </button>
+                <h3>
+                    Subheader
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
+                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
+                    reiciendis nesciunt numquam. 
+                </p>
+                <button>
+                    Learn More
+                </button>
+                <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
+            </section>
+            <section id="contact-us">
+                <h2>
+                    Contact Us
+                </h2>
+                <form action="">
+                    <label for="name">
+                        Name
+                    </label>
+                    <input type="text" placeholder="Insert your name">
+                    <label for="email">
+                        Email
+                    </label>
+                    <input type="email" placeholder="Insert your email">
+                    <label for="contactarea">
+                        Contact area:
+                    </label>
+                    <select name="area" id="area">
+                        <option value="rrhh">
+                            Human resources
+                        </option>
+                        <option value="development">
+                            Development
+                        </option>
+                        <option value="marketing">
+                            Marketing
+                        </option>
+                    </select>
+                    <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...</textarea>
+                </form>
+            </section>
+            <section>
+                <h2>
+                    Trackgenix
+                </h2>
+                <h3>
+                     Products
+                </h3>
+                <ol>
+                    <li>
+                        Features
+                    </li>
+                    <li>
+                        Downloads
+                    </li>
+                    <li>
+                        Integrations
+                    </li>
+                    <li>
+                        Extras
+                    </li>
+                </ol>
+                <h3>
+                    Company
+                </h3>
+                <ol>
+                    <li>
+                        About us
+                    </li>
+                    <li>
+                        Clients
+                    </li>
+                    <li>
+                        Resources
+                    </li>
+                    <li>
+                        Blog
+                    </li>
+                </ol>
+                <h3>
+                    Support
+                </h3>
+                <ol>
+                    <li>
+                        Help
+                    </li>
+                    <li>
+                        Tutorials
+                    </li>
+                    <li>
+                        API
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                </ol>
+            </section>
+            <footer>
+                <img src="assets/icons/twitter-brands.svg" alt="twitter icon" height="25px" width="25px">
+                <img src="assets/icons/linkedin-brands.svg" alt="linkedin icon" height="25px" width="25px">
+                <img src="assets/icons/github-brands.svg" alt="github icon" height="25px" width="25px">
+                <img src="assets/icons/instagram-brands.svg" alt="instagram-logo" height="25px" width="25px">
+                <img src="assets/icons/facebook-brands.svg" alt="facebook logo" height="25px" width="25px">
+            </footer>
+        </main>
+    </body>
 </html>
