--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -60,8 +60,8 @@
                     ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis voluptates ratione.
                     Modi, aut nobis?
                 </p>
-                <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="office" width="600" height="400">
-                <img src="https://images.unsplash.com/photo-1604307743907-df8d5fe9f1de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="software" width="600" height="400">
+                <img src="assets/img/alex-kotliarskyi-QBpZGqEMsKg-unsplash.jpg" alt="office">
+                <img src="assets/img/austin-distel-wD1LRb9OeEo-unsplash.jpg" alt="software">
                 <h2>
                     Our History
                 </h2>
@@ -102,7 +102,7 @@
                 <h2>
                     Why Trackgenix?
                 </h2>
-                <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
+                <img src="assets/img/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="office">
                 <h3>
                     Subheader
                 </h3>
@@ -125,8 +125,8 @@
                 <button>
                     Learn More
                 </button>
-                <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
-                <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80" alt="office" width="600" height="400">
+                <img src="assets/img/headway-5QgIuuBxKwM-unsplash.jpg" alt="office">
+                <img src="assets/img/israel-andrade-YI_9SivVt_s-unsplash.jpg" alt="office">
                 <h3>
                     Subheader
                 </h3>
@@ -149,7 +149,7 @@
                 <button>
                     Learn More
                 </button>
-                <img src="https://images.unsplash.com/photo-1623122245120-7eef6faa39c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="office" width="600" height="600">
+                <img src="assets/img/thisisengineering-raeng-64YrPKiguAE-unsplash.jpg" alt="office">
             </section>
             <section id="contact-us">
                 <h2>
@@ -178,7 +178,7 @@
                             Marketing
                         </option>
                     </select>
-                    <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...</textarea>
+                    <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...
                 </form>
             </section>
             <section>
