--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -178,7 +178,7 @@
                             Marketing
                         </option>
                     </select>
-                    <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...
+                    <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...</textarea>
                 </form>
             </section>
             <section>
