--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            Document
+            Trackgenix
         </title>
     </head>
     <body>
@@ -20,6 +20,7 @@
             <span>
                 Menu
             </span>
+            <hr>
             <a href="#home">
                 Homepage
             </a>
@@ -32,12 +33,16 @@
             <span>
                 Get in touch
             </span>
+            <hr>
+            <img src="assets/icons/envelope-solid.svg" alt="mail" height="15px" width="15px">
             <span>
                 mailinfo@trackgenix.com
             </span>
+            <img src="assets/icons/phone-solid.svg" alt="phone" height="15px" width="15px">
             <span>
                 123-456789
             </span>
+            <img src="assets/icons/house-solid.svg" alt="adress" height="15px" width="15px">
             <span>
                 123 fake road #2000
             </span>
@@ -48,17 +53,21 @@
         <main>
             <header>
                 <h1>
-                    Trackgenix
+                    Trackgenix SA
                 </h1>
+                <hr>
             </header>
             <section id="home">
                 <h2>
                     What is Trackgenix
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam pariatur 
-                    ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis voluptates ratione.
-                    Modi, aut nobis?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
+                    pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
+                    voluptates ratione. Modi, aut nobis?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
+                    pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
+                    voluptates ratione. Modi, aut nobis?
                 </p>
                 <img src="assets/img/alex-kotliarskyi-QBpZGqEMsKg-unsplash.jpg" alt="office">
                 <img src="assets/img/austin-distel-wD1LRb9OeEo-unsplash.jpg" alt="software">
@@ -66,19 +75,26 @@
                     Our History
                 </h2>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime dolores
-                    omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum reiciendis temporibus
-                    numquam. Alias, deleniti!
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime
+                    dolores omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum
+                    reiciendis temporibus numquam. Alias, deleniti!
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime
+                    dolores omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum
+                    reiciendis temporibus numquam. Alias, deleniti!
                 </p>
+                <button>
+                    Learn More
+                </button>
             </section>
             <section id="features">
                 <h2>
                     Features
                 </h2>
+                <hr>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit illo
-                    amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam aperiam.
-                    Molestias!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit
+                    illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam
+                    aperiam.Molestias!
                 </p>
                 <ul>
                     <li>
@@ -102,6 +118,7 @@
                 <h2>
                     Why Trackgenix?
                 </h2>
+                <hr>
                 <img src="assets/img/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="office">
                 <h3>
                     Subheader
@@ -155,6 +172,7 @@
                 <h2>
                     Contact Us
                 </h2>
+                <hr>
                 <form action="">
                     <label for="name">
                         Name
@@ -180,6 +198,12 @@
                     </select>
                     <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...</textarea>
                 </form>
+                <button>
+                    Send message
+                </button>
+                <button>
+                    Reset
+                </button>
             </section>
             <section>
                 <h2>
@@ -238,11 +262,21 @@
                 </ol>
             </section>
             <footer>
-                <img src="assets/icons/twitter-brands.svg" alt="twitter icon" height="25px" width="25px">
-                <img src="assets/icons/linkedin-brands.svg" alt="linkedin icon" height="25px" width="25px">
-                <img src="assets/icons/github-brands.svg" alt="github icon" height="25px" width="25px">
-                <img src="assets/icons/instagram-brands.svg" alt="instagram-logo" height="25px" width="25px">
-                <img src="assets/icons/facebook-brands.svg" alt="facebook logo" height="25px" width="25px">
+                <a href="http://www.twitter.com" target="blank">
+                    <img src="assets/icons/twitter-brands.svg" alt="twitter icon" height="25px" width="25px">
+                </a>
+                <a href="http://www.linkedin.com" target="blank">
+                    <img src="assets/icons/linkedin-brands.svg" alt="linkedin icon" height="25px" width="25px">
+                </a>
+                <a href="http://www.github.com" target="blank">
+                    <img src="assets/icons/github-brands.svg" alt="github icon" height="25px" width="25px">
+                </a>
+                <a href="http://www.instagram.com" target="blank">
+                    <img src="assets/icons/instagram-brands.svg" alt="instagram-logo" height="25px" width="25px">
+                </a>
+                <a href="http://www.facebook.com" target="blank">
+                    <img src="assets/icons/facebook-brands.svg" alt="facebook logo" height="25px" width="25px">
+                </a>
             </footer>
         </main>
     </body>
