BaSP-2022: Sidebar style, some changes on the content

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <title>
             Trackgenix
         </title>
@@ -42,18 +46,24 @@
                     Get in touch
                 </span>
                 <div class="contactInfo">
-                    <img src="assets/icons/envelope-solid.svg" alt="mail" height="15px" width="15px">
-                    <span>
-                        mailinfo@trackgenix.com
-                    </span>
-                    <img src="assets/icons/phone-solid.svg" alt="phone" height="15px" width="15px">
-                    <span>
-                        123-456789
-                    </span>
-                    <img src="assets/icons/house-solid.svg" alt="adress" height="15px" width="15px">
-                    <span>
-                        123 fake road #2000, Rosario, Argentina
-                    </span>
+                    <div class="icon-link">
+                        <img src="assets/icons/envelope-solid.svg" alt="mail" height="15px" width="15px">
+                        <span>
+                            mailinfo@trackgenix.com
+                        </span>
+                    </div>
+                    <div class="icon-link">
+                        <img src="assets/icons/phone-solid.svg" alt="phone" height="15px" width="15px">
+                        <span>
+                            123-456789
+                        </span>
+                    </div>
+                    <div class="icon-link">
+                        <img src="assets/icons/house-solid.svg" alt="adress" height="15px" width="15px">
+                        <span>
+                            123 fake road #2000, Rosario, Argentina
+                        </span>
+                    </div>
                 </div>
             </div>
         </nav>
