BaSP-W05-M2022: ex02-strings

--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -8,6 +8,7 @@
             Week 05
         </title>
         <script src="Exercises/01_variables_and_operators.js"></script>
+        <script src="Exercises/02_strings.js"></script>
     </head>
     <body>
     </body>
