BaSP-W05-2022: ex03-arrays

--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -9,6 +9,7 @@
         </title>
         <script src="Exercises/01_variables_and_operators.js"></script>
         <script src="Exercises/02_strings.js"></script>
+        <script src="Exercises/03_arrays.js"></script>
     </head>
     <body>
     </body>
